// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetIcon matches custom props snapshot 1`] = `
<div
  class="c-card"
>
   
  <div
    class="c-card-body c-clearfix c-d-flex c-align-items-center c-p-0"
  >
    <div
      class="c-float-left c-mr-3 c-text-white c-bg-success c-p-4"
    />
     
    <div>
      <div
        class="c-text-value c-text-success"
      >
        
        header
      
      </div>
       
      <div
        class="c-text-muted c-text-uppercase c-font-weight-bold c-small"
      >
        
        text
      
      </div>
    </div>
  </div>
   
</div>
`;

exports[`CWidgetIcon matches default props snapshot 1`] = `
<div
  class="c-card"
>
   
  <div
    class="c-card-body c-clearfix c-d-flex c-align-items-center c-p-3"
  >
    <div
      class="c-float-left c-mr-3 c-text-white c-bg-undefined c-p-3"
    />
     
    <div>
      <!---->
       
      <!---->
    </div>
  </div>
   
</div>
`;
